# 069-prompt-engineering-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  llm_client.py  regime_detection.py  requirements.txt  sentiment_analysis.py  signal_generator.py
python/examples/: __init__.py  backtest_demo.py  full_pipeline_demo.py  sentiment_demo.py  signal_demo.py
python/prompts/: __init__.py  regime.py  sentiment.py  signals.py
rust/: Cargo.toml
rust/src/: backtest.rs  data.rs  error.rs  lib.rs  llm_client.rs  prompts.rs  regime.rs  sentiment.rs  signals.rs
