[package]
name = "prompt_engineering_trading"
version = "0.1.0"
edition = "2021"
description = "Prompt Engineering for Trading - Rust Implementation"
license = "MIT"
keywords = ["trading", "llm", "prompt-engineering", "finance"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Futures utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
